State why the baseline is Java 25, and drop an unnecessary JVM flag
The requirements table said which Java version without saying why. The
reason is JMPQ3 2.0's read layer: it maps an archive into an Arena-scoped
MemorySegment instead of a MappedByteBuffer, so the mapping is released when
the archive is closed rather than whenever the collector gets round to it,
which is what makes rebuilding a map in place work on Windows. Adopting that
API is what took JMPQ3 past Java 21; 25 is the version its consumers already
run. Its AUDIT.md records the same reasoning.

Checking that claim showed the `--enable-native-access=ALL-UNNAMED` I added
to the test JVM was cargo cult, and its comment -- that every archive opened
without it logs a warning -- was simply wrong. Mapping a file into a segment
is not a restricted operation: it is bounds-checked and arena-scoped, so
there is nothing to permit. Running the suite under
`--illegal-native-access=deny` with no enable flag passes, and JMPQ3 calls no
restricted method anywhere (no Linker, reinterpret, libraryLookup or
withTargetLayout). The flag and the comment are gone, and the README says so
rather than leaving the next person to wonder.